All permission error fixed! I am finding the solution to fun this saving funtionality run successfully!

--- a/popup.html
+++ b/popup.html
@@ -53,6 +53,10 @@
 							<iron-icon icon="note-add" slot="item-icon" style="color:#999"></iron-icon>
 							<span msg="fileUpload">file upload</span>
 						</paper-icon-item>
+						<paper-icon-item id="savePage">
+							<iron-icon icon="note-add" slot="item-icon" style="color:#999"></iron-icon>
+							<span msg="pageFileUpload">webpage saving</span>
+						</paper-icon-item>
 						<paper-item class="separator" disabled></paper-item>
 						<paper-icon-item id="newDoc">
 							<iron-icon src="https://ssl.gstatic.com/docs/doclist/images/icon_11_document_list.png" slot="item-icon"></iron-icon>
@@ -112,7 +116,7 @@
 				<app-toolbar>
 					<div class="flex">
 						<iron-icon id="menu" icon="menu" tabindex="0"></iron-icon>
-						<span id="mainTitle" hidden>CHECKER PLUS for Google Drive</span>
+						<span id="mainTitle" hidden>Save page to Google Drive</span>
 						<paper-tooltip msg="openGoogleDrive" for="mainTitle"></paper-tooltip>
 					</div>
 					<div id="topRight">
