I have done uploading saved page to google drive!

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html style="overflow:hidden">
 <head>
- 	<title>Checker Plus for Google Drive - Popup page</title>
+ 	<title>List of saved pages in Google Drive - Popup page</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<script src="js/polymer-css.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/popup.css">
