I have done this extension basically!

--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Checker Plus for Google Drive&trade; - Options</title>
+	<title>Save Pages to Google Drive&trade; - Options</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	
 	<script src="js/polymer-css.js"></script>
@@ -49,7 +49,7 @@
 		<app-header slot="header" fixed post-effects="waterfall">
 			<app-toolbar>
 				<img id="logo" src="images/48-drive-white.png" style="vertical-align:middle"/>
-				<div main-title><a class="inherit" href="https://jasonsavard.com?ref=DriveOptionsTitle">Checker Plus for Google Drive</a></div>
+				<div main-title><a class="inherit" href="https://jasonsavard.com?ref=DriveOptionsTitle">Save Pages to Google Drive</a></div>
 				<paper-button id="version">version</paper-button>
 				<a class="inherit" href="https://jasonsavard.com/wiki/Checker_Plus_for_Google_Drive_changelog?ref=DriveOptions"><paper-button><span msg="changelog"></span></paper-button></a>
 				<a class="inherit" href="contribute.html"><paper-button><span msg="contribute"></span></paper-button></a>
